--- a/style.css
+++ b/style.css
@@ -121,16 +121,107 @@ body{
    color:var(--black);
 }
 
-.form-container form p a{
-   color:var(--red);
-}
 
 .form-container form p a:hover{
    text-decoration: underline;
 }
 
+* {
+	padding: 0;
+	margin: 0;
+	text-decoration: none;
+	list-style: none;
+	box-sizing: border-box;
+}
+
+body {
+	font-family: montserrat;
+}
+nav {
+	background: #224ce1;
+	height: 80px;
+	width: 100%;
+}
+label.logo {
+	color: white;
+	font-size: 35px;
+	line-height: 80px;
+	padding: 0 100px;
+	font-weight: bold;
+}
+nav ul {
+	float: right;
+	margin-right: 20px;
+}
+nav ul li {
+	display: inline-block;
+	line-height: 80px;
+	margin: 0 5px;
+}
+nav ul li a {
+	color: white;
+	font-size: 17px;
+	padding: 7px 13px;
+	border-radius: 3px;
+	text-transform: uppercase;
+}
+a.active, a:hover {
+	background: #1d075f;
+	transition: .5s;
+}
+.checkbtn {
+	font-size: 30px;
+	color: white;
+	float: right;
+	line-height: 80px;
+	margin-right: 40px;
+	cursor: pointer;
+	display: none;
+}
+#check {
+	display: none;
+}
+@media (max-width: 952px){
+	label.logo{
+		font-size: 30px;
+		padding-left: 50px;
+	}
+	nav ul li a{
+		font-size: 16px;
+	}
+}
+@media (max-width: 858px){
+	.checkbtn {
+		display: block;
+	}
+	ul{
+		position: fixed;
+		width: 100%;
+		height: 100vh;
+		background: #1d075f;
+		top: 80px;
+		left: -100%;
+		text-align: center;
+		transition: all .5s;
+	}
+	nav ul li{
+		display: block;
+		margin: 50px 0;
+		line-height: 30px;
+	}
+	nav ul li a {
+		font-size: 20px;
+	}
+	a:hover, a.active {
+		background: none;
+		color: #5434af;
+	}
+	#check:checked ~ ul {
+		left: 0;
+	}
+}
 .container{
-   padding:0 20px;
+   padding:0;
    margin:0 auto;
    max-width: 1200px;
    padding-bottom: 70px;
@@ -144,15 +235,14 @@ body{
    color:var(--black);
 }
 
-.container .user-profile{
-   padding:20px;
+.user-profile{
+   display: flex;
+   padding:20px 20px;
    text-align: center;
-   border:var(--border);
-   background-color: var(--white);
-   box-shadow: var(--box-shadow);
-   border-radius: 5px;
-   margin:20px auto;
-   max-width: 500px;
+   background-color: var(---light-bg);
+   margin-right:5px;
+   max-width: 300px;
+
 }
 
 .container .user-profile p{
@@ -161,9 +251,7 @@ body{
    color:var(--black);
 }
 
-.container .user-profile p span{
-   color:var(--red);
-}
+
 
 .container .user-profile .flex{
    display: flex;
