--- a/style2.css
+++ b/style2.css
@@ -5,7 +5,7 @@ body
     background-color:#6ede6aba;
     font-family: 'Arial';
 }
-.login{
+.page{
         width: 382px;
         overflow: hidden;
         margin: auto;
@@ -31,7 +31,7 @@ label{
     border-radius: 3px;
     padding-left: 8px;
 }
-#Pass{
+#password, #email{
     width: 300px;
     height: 30px;
     border: none;
@@ -83,3 +83,16 @@ span{
         text-decoration: underline;
     }
 }
+.message{
+    position: sticky;
+    top:0; left:0; right:0;
+    padding:15px 10px;
+    background-color: var(--white);
+    text-align: center;
+    z-index: 1000;
+    box-shadow: var(--box-shadow);
+    color:var(--black);
+    font-size: 20px;
+    text-transform: capitalize;
+    cursor: pointer;
+ }
