--- a/style2.css
+++ b/style2.css
@@ -87,12 +87,60 @@ span{
     position: sticky;
     top:0; left:0; right:0;
     padding:15px 10px;
-    background-color: var(--white);
+    background-color: whitesmoke;
     text-align: center;
     z-index: 1000;
-    box-shadow: var(--box-shadow);
-    color:var(--black);
+    box-shadow: grey;
+    color: black;
     font-size: 20px;
     text-transform: capitalize;
     cursor: pointer;
  }
+nav {
+	background: #224ce1;
+	height: 80px;
+	width: 100%;
+}
+label.logo {
+	color: white;
+	font-size: 35px;
+	line-height: 80px;
+	padding: 0 100px;
+	font-weight: bold;
+}
+nav ul {
+	float: right;
+	margin-right: 20px;
+}
+nav ul li {
+	display: inline-block;
+	line-height: 80px;
+	margin: 0 5px;
+}
+nav ul li a {
+	color: white;
+	font-size: 17px;
+	padding: 7px 13px;
+	border-radius: 3px;
+	text-transform: uppercase;
+}
+a.active, a:hover {
+	background: #1d075f;
+	transition: .5s;
+}
+.checkbtn {
+	font-size: 30px;
+	color: white;
+	float: right;
+	line-height: 80px;
+	margin-right: 40px;
+	cursor: pointer;
+	display: none;
+}
+#check {
+	display: none;
+}
+.logout{
+    text-decoration: none;
+    border: solid black 2px;
+}
