--- a/style.css
+++ b/style.css
@@ -37,6 +37,11 @@ font-weight: 300;
 font-size: 24px;
 line-height: 36px;
 padding-inline: 10px;
+&&:hover{
+   background-color: #95a0ff;
+   font-weight: 600;
+   color: black;
+}
 }
 .userInfo span{
 width: 180px;
