--- a/UserLogin/style2.css
+++ b/UserLogin/style2.css
@@ -8,7 +8,7 @@ body
 {
     margin: 0;
     padding: 0;
-    background-color:#6ede6aba;
+    background-color:white;
     font-family: 'Arial';
 }
 .page{
