--- a/UserLogin/style2.css
+++ b/UserLogin/style2.css
@@ -1,8 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap');
 *{
    font-family: 'Poppins', sans-serif;
    margin:0; padding:0;
    text-decoration: none;
+    border: solid 1px black;
 }
 body
 {
@@ -79,7 +80,7 @@ label{
 
 span{
     color: white;
-    font-size: 17px;
+    font-size: 24px;
 }
 .forgot{
     float: right;
@@ -112,27 +113,44 @@ nav{
 .contain{
    display:flex;
    justify-content: space-between;
-   margin: auto 8em 0px 8em;
+   margin: auto 6em 0px 6em;
    padding-top: 12px;
 
 }
 .userInfo{
    margin-top:8px;
    width: auto;
+   font-size: 24px;
+}
+.userInfo button{
+    padding: 2px 25px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 2px;
+    background: #27282C;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    color: #FFF;
+    text-align: center;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+
 }
 .logOut{
-width: 180px;
-height: 40px;
-background: #394CFF;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-border-radius: 6px;
-font-family: 'Poppins';
-color: rgb(255, 255, 255);
-font-style: normal;
-font-weight: 300;
-font-size: 24px;
-line-height: 36px;
-padding-inline: 10px;
+    width: 180px;
+    background: #394CFF;
+    padding: 2px 25px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 2px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    color: #FFF;
+    text-align: center;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
 &&:hover{
    background-color: #95a0ff;
    font-weight: 600;
@@ -140,16 +158,82 @@ padding-inline: 10px;
 }
 }
 .userInfo span{
-width: 180px;
-height: 40px;
-background:#7839FF;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-border-radius: 6px;
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 500;
-font-size: 24px;
-line-height: 36px;
-color: black;
-padding-inline: 10px;
+    width: 180px;
+    background:#7839FF;
+    padding: 2px 25px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 2px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    color: #FFF;
+    text-align: center;
+    font-size: 24px;
+    font-style: italic;
+    font-weight: 300;
+    line-height: normal;
 }
+.hero{
+    display: flex;
+    justify-content: space-between;
+}
+.hero-image{
+    background: center/100% no-repeat
+     url(images/hero.png);
+     height: 600px;
+     width: 600px;
+     margin-right: 14em;
+
+}
+.hero .contain{
+    display: block;
+    width: 40%;
+    padding-left: 20px;
+    height: 500px;
+    padding-top: 50px;
+}
+.hero-h1{
+    color: #191919;
+font-family: Poppins;
+font-size: 36px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+}
+.hero-p{
+    color: rgba(0, 0, 0, 0.90);
+    font-family: Poppins;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    width: 80%;
+    margin-top: 30px;
+}
+
+.cta-button {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 15px;
+    background-color: #e0e0e0;
+    font-weight: bold;
+    color: #000000;
+    font-size: 24px;
+    text-decoration: none;
+    border-radius: 4px;
+    width: 200px;
+    height: 40px;
+    flex-shrink: 0;
+    margin-top: 40px;
+    &:hover{
+        background-color: #b0b0b0;
+        color: #000000; 
+    }
+}
+
+.cta-button svg {
+    width: 24px;
+    height: 24px;
+    margin-right: 5px;
+}
+
